--- a/config.json
+++ b/config.json
@@ -13,15 +13,15 @@
   "checkApproval": true,
   "language": "en",
   "notesLanguage": "change to your language with ISO 639-1 code, available languages: vi (Vietnamese), en (English)",
-  "nickNameBot": "𝐁𝐀𝐘𝐉𝐈𝐃-𝐁𝐎𝐓",
-  "prefix": "?",
+  "nickNameBot": "-♦𝐓𝐀𝐍𝐕𝐈𝐑 𝐁𝐎𝐓♦-",
+  "prefix": "/",
   "adminOnly": {
     "enable": false,
     "ignoreCommand": []
   },
   "adminBot": [
-    "100087916843768",
-    "100005193854879"
+    "61561619394932",
+    "61567467803735"
   ],
   "whiteListMode": {
     "enable": false,
